mudancas em diversas views

--- a/SweeTron/SweeTron/SweeTron/Views/Home/Contact.cshtml
+++ b/SweeTron/SweeTron/SweeTron/Views/Home/Contact.cshtml
@@ -15,7 +15,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <div class="card-header bg-success text-white text-uppercase" style="color:white; font-size: 70px; text-align:center; background-color: transparent;"><i class="fa fa-home"></i>Contacte-nos!</div>
+                        <div class="card-header bg-success text-white text-uppercase" style="color:white; text-align:center; background-color: transparent;"><i class="fa fa-home"></i><h1>Contacte-nos!</h1></div>
                         <form>
                             <div class="form-group">
                                 <label for="name">Nome</label>
